hud-nem-team/hud-nem-ambulance-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hud-nem-erl-webapi
spec:
  type: ClusterIP
  selector:
    pod: hud-nem-erl-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
